kustomize/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: PLACEHOLDER_NAMESPACE
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
