kustomize/base/backend-route-get.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workshop-backend-get
  namespace: PLACEHOLDER_NAMESPACE
  labels:
    app: backend
spec:
  host: ${FRONTEND_URL}
  path: /get
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: 5000
  wildcardPolicy: None
