kustomize/base/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workshop-frontend
  namespace: PLACEHOLDER_NAMESPACE
  labels:
    app: frontend
spec:
  host: workshop-frontend-${NAMESPACE}apps-crc.az.synchro.ar
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
